# cmla

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: codecheck.yml  docs.yml
cmla/: __init__.py
cmla/models/: __init__.py  gmm.py  hmm.py  kmeans.py  sampler.py  utils.py
cmla/plots/: __init__.py
cmla/scripts/: kmeans_cli.py  sampler_cli.py
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/algorithms/: gmm.rst  hmm.rst  kmeans.rst
docs/api/: models.rst  plots.rst  scripts.rst
docs/tutorials/: index.rst
scripts/: __init__.py  hmm_cli.py
tests/: test_gmm.py  test_hmm_forward.py  test_hmm_training.py  test_hmm_viterbi.py  test_kmeans.py  test_sampler_cli.py  test_utils.py
