[project]
name = "cmla"
version = "0.1.0a0"
description = "Classical Machine Learning Algorithms - Python package for educational and research purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
cmla-kmeans = "cmla.scripts.kmeans_cli:main"
cmla-hmm   = "cmla.scripts.hmm_cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "nbsphinx>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cmla", "scripts"]

[tool.setuptools.packages.find]
exclude = ["models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
